# NeoSort-Visualizer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  app  build.yml  just4me.cpp
src/: algorithms.cpp  algorithms.h  font_data.h  main.cpp  static.h  ui.cpp  ui.h  visualizer.cpp  visualizer.h
